tests/semantic/fail/record-1.tiger
let
	type a = {a : int, a : int}
in
end
